2007-12-22  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.22.modules: add pixman (module
	splitted out of cairo)  (closes: #504216)

2007-12-22  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules, modulesets/gnutls.modules,
	modulesets/gnome-external-deps-2.20.modules,
	modulesets/gnome-external-deps-2.22.modules: ftp.gnu.org doesn't serve
	anymore over http, switch to ftp.

2007-12-22  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules:
	Added "PolicyKit" and "PolicyKit-gnome" modules (grabbed
	from released talball, to be honest, we'll have to simply
	cut and paste if officially added to extern deps).
	
	* modulesets/gnome-suites-2.22.modules:
	Added PK and PK-gnome to meta-gnome-proposed

2007-12-21  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules:
	Added "poppler-data" module (optional encoding files
	used by poppler to correctly render CJK and Cyrrilic).
	Those are not in poppler package due to licence.

	* modulesets/gnome-external-deps-2.22.modules:
	Make "poppler" module depends on poppler-data (to make
	CJK and Cyrrilic people happy).

2007-12-21  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/git.py: fixed git pull from master branch
	(closes: #504896)

2007-12-20  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.22.modules: added cheese and gvfs to
	meta-gnome-proposed.

2007-12-20  Frederic Peters  <fpeters@0d.be>

	* jhbuild/versioncontrol/darcs.py: fixed getting tree_id for Darcs
	modules.  (closes: #504648)

2007-12-20  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.22.modules:
	Added libspectre (library for rendering Postscript documents).

2007-12-20  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-external-deps-2.22.modules:
	Updated poppler to 0.6.3 (also updated wiki page).

2007-12-19  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	reviewed by: Frederic Peters
