@@ -1,5 +1,12 @@
 2007-12-22  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/svn.py: added possibility to specify a
+	revision number in the revision attribute, not just a branch
+	(considered as revision number if it is all digits); patch by Craig
+	Keogh  (closes: #504809)
+
+2007-12-22  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-external-deps-2.22.modules: add pixman (module
 	splitted out of cairo)  (closes: #504216)
 
